--- a/serverless.yml
+++ b/serverless.yml
@@ -61,6 +61,14 @@ provider:
 functions:
   hello:
     handler: handler.hello
+
+resources:
+  Resources:
+      DemoBucketUpload:
+        Type: AWS::S3::Bucket
+        Properties:
+          BucketName: myserverlessproject-90210
+
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
